Fix z-index bug

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap");
 
 
-
+.navbar {
+  display: flex;
+  align-items: center;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-weight: 300;
+  height: 170px;
+  background-color: rgb(0, 0, 0);
+  z-index: 600;
+}
 
 .navbar a {
   color: rgb(255, 255, 255);
@@ -16,43 +25,8 @@
   left: -1970px;
   padding: 2200px 011px;
   justify-content: space-between;
-
-  /* position: relative; */
-  /* right: -630px; */
-  /* margin-left: 16px; */
-  /* padding-right: 500px; */
-  /* background-color: rgb(255, 196, 0); */
 }
 
-
-.navbar {
-  display: flex;
-  align-items: center;
-  /* border: 10px solid rgb(255, 255, 255); */
-  font-family: 'Oswald', sans-serif;
-  text-transform: uppercase;
-  font-weight: 300;
-  height: 170px;
-  /* max-height: max-content; */
-
-  /* position: relative;
-  left: 50px; */
-
-
-  background-color: rgb(0, 0, 0);
-  z-index: 300;
-
-  /* color: rgb(255, 255, 255); */
-  /* width: 100%; out*/
-  /* background-color: rgb(255, 0, 200); */
-  /* padding: 30px; */
-  /* position: fixed; */
-  /* width: 100vh; out*/
-
-  /* color: rgb(255, 255, 255); */
-
-
-}
 
 h1 {
 
@@ -61,38 +35,24 @@ h1 {
   position: relative;
   left: 1000px;
   text-transform: uppercase;
-  /* right: -1950px; */
   margin: auto;
   color: rgb(255, 255, 255);
 }
-
-
 
 .h1 .navbar {
   display: inline-block;
 }
 
 .Bio {
-
   width: 700px;
-  /* border: 15px solid green; */
-  /* padding: 50px; */
   margin: auto;
-  /* background-color: rgb(23, 65, 23);
-  color: white; */
   color: rgb(0, 0, 0);
-  /* position: relative;
-  left: 1000px; */
-  /* font-family: 'Oswald', sans-serif; */
+
 }
 
 img {
   max-width: 40%;
   max-height: auto;
-
-  /* position: relative;
-  left: 800px; */
-  /* object-fit: contain; */
 }
 
 
@@ -105,18 +65,12 @@ img {
   align-items: center;
   height: 100vh;
   color: #333;
-  /* font-family: 'Oswald', sans-serif;
-  font-size: 30px;
-  text-transform: uppercase; */
-
 }
 
-/* .Bio, */
-/* .Journey, */
-/* .Portfolio, */
+
+
 .Contact {
   margin: auto;
-  /* margin-top: -700px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -147,23 +101,17 @@ body {
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 70px;
-  /* width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden; */
-
 }
 
 
 .Journey {
   margin: auto;
   color: #333;
-  /* font-family: 'Oswald', sans-serif; */
+
 }
 
 .Journey h2 {
-  /* font-size: 50px; */
+
   color: rgb(0, 0, 0);
   font-family: 'Oswald', sans-serif;
   font-size: 45px;
@@ -177,12 +125,13 @@ html {
 .Journey h2:hover {
   color: white;
   background-color: black;
+  width: max-content;
 
 
 }
 
 .Bio h2 {
-  /* font-size: 50px; */
+
   color: rgb(0, 0, 0);
   font-family: 'Oswald', sans-serif;
   font-size: 45px;
@@ -190,15 +139,17 @@ html {
   position: relative;
   left: -710px;
   z-index: 300;
-  /* float: left; */
-  /* padding-left: 100px; */
+
 }
 
 
 .Bio h2:hover {
   color: white;
   background-color: black;
-  background-position: xpox ypos;
+  width: max-content;
+
+
+  /* background-position: xpox ypos; */
 
 }
 
@@ -216,8 +167,7 @@ html {
 .Portfolio h2:hover {
   color: white;
   background-color: black;
-
-
+  width: max-content;
 }
 
 .Contact h2 {
@@ -228,14 +178,18 @@ html {
   text-transform: uppercase;
   position: relative;
   left: -700px;
+  z-index: 400;
 }
 
-/* 
-.Contact h2:hover {
-  color: white;
-  background-color: black;
 
-} */
+.Contact h2:hover {
+  color: black;
+  background-color: white;
+  width: max-content;
+
+
+
+}
 
 h2.vertical-timeline-element-title {
   font-family: 'Oswald', sans-serif;
